src/test/ui/consts/const_in_pattern/ice-regression.stderr
error: expected item, found keyword `match`
  --> $DIR/ice-regression.rs:8:1
   |
LL | match FOO {
   | ^^^^^ expected item

error: aborting due to previous error

